Added search field

--- a/DefaulterList/DefaulterList.csproj
+++ b/DefaulterList/DefaulterList.csproj
@@ -117,6 +117,9 @@
     <Compile Include="Views\RightPanelTeam.xaml.cs">
       <DependentUpon>RightPanelTeam.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Search.xaml.cs">
+      <DependentUpon>Search.xaml</DependentUpon>
+    </Compile>
     <Page Include="Views\CentrGridDefaulter.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -153,6 +156,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\RightPanelTeam.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Search.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
