--- a/DefaulterList/DefaulterList.csproj
+++ b/DefaulterList/DefaulterList.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Models\TotalList.cs" />
     <Compile Include="Models\Worker.cs" />
     <Compile Include="Services\LoadService.cs" />
+    <Compile Include="Services\PrintService.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="Views\CentrGridDefaulter.xaml.cs">
@@ -203,7 +204,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <SplashScreen Include="Splash.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
